--- a/p2.css
+++ b/p2.css
@@ -53,7 +53,8 @@ th, td {
 }
 
 .product-card img {
-    width: 100%;
+    width: 200px;  /* Ancho fijo */
+    height: 450px; 
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
 }
@@ -96,7 +97,8 @@ th, td {
 }
 
 .modal-content img {
-    width: 100%;
+    width: 250px;
+    height: 500px ;
     border-radius: 10px;
 }
 
