--- a/p1.css
+++ b/p1.css
@@ -213,3 +213,95 @@ th, td {
     font-size: 20px;
     cursor: pointer;
 }
+
+/*card 3*/
+
+.product-card-3{
+    width: 450px;  /* Que se adapte al contenedor */
+    aspect-ratio: 2/1; /* Mantiene la proporción cuadrada */
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    padding: 15px;
+    margin: 20px auto;
+}
+
+.product-card-3 img {
+    width: 400px;
+    height: 250px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    object-fit: cover; /* Asegura que la imagen se recorte sin deformarse */
+}
+.product-card-3:hover img {
+    transform: scale(1.05);
+}
+
+.product-card-3 h3 {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.product-card-3 p {
+    font-size: 16px;
+    color: green;
+    font-weight: bold;
+}
+
+.modal3 {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content3 {
+    display: flex;
+    flex-direction: column; /* Apila los elementos verticalmente */
+    align-items: center; /* Centra el contenido */
+    text-align: center; 
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    width: 600px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    aspect-ratio: 1/1; /* Cuadrado */
+}
+
+.modal-content3 img {
+    width: 500px;
+    height: 300px ;
+    border-radius: 10px;
+}
+
+
+.modal-content3 h3 {
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.modal-content3 p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.close-btn3 {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
