--- a/p2.css
+++ b/p2.css
@@ -41,7 +41,6 @@ th, td {
     box-sizing: border-box;
 }
 
-
 .product-card {
     width: 250px;
     background: white;
@@ -74,6 +73,97 @@ th, td {
     font-weight: bold;
 }
 
+.product-card-2{
+    width: 250px;  /* Que se adapte al contenedor */
+    aspect-ratio: 1/1; /* Mantiene la proporción cuadrada */
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    padding: 15px;
+    margin: 20px auto;
+}
+
+.product-card-2 img {
+    width: 220px;
+    height: 200px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    object-fit: cover; /* Asegura que la imagen se recorte sin deformarse */
+}
+.product-card-2:hover img {
+    transform: scale(1.05);
+}
+
+.product-card-2 h3 {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.product-card-2 p {
+    font-size: 16px;
+    color: green;
+    font-weight: bold;
+}
+
+.modal2 {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content2 {
+    display: flex;
+    flex-direction: column; /* Apila los elementos verticalmente */
+    align-items: center; /* Centra el contenido */
+    text-align: center; 
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    width: 500px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
+    aspect-ratio: 1/1; /* Cuadrado */
+}
+
+.modal-content2 img {
+    width: 300px;
+    height: 300px ;
+    border-radius: 10px;
+}
+
+
+.modal-content2 h3 {
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.modal-content2 p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.close-btn2 {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+
 /* MODAL */
 .modal {
     display: none;
@@ -94,6 +184,10 @@ th, td {
     width: 300px;
     text-align: center;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 500px;
 }
 
 .modal-content img {
@@ -113,6 +207,100 @@ th, td {
 }
 
 .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/*card 3*/
+
+.product-card-3{
+    height: 600px;
+    width: 280px;  /* Que se adapte al contenedor */
+    aspect-ratio: 2/1; /* Mantiene la proporción cuadrada */
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+    padding: 15px;
+    margin: 20px auto;
+
+}
+
+.product-card-3 img {
+    width: 250px;
+    height: 400px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    object-fit: cover; /* Asegura que la imagen se recorte sin deformarse */
+}
+.product-card-3:hover img {
+    transform: scale(1.05);
+}
+
+.product-card-3 h3 {
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.product-card-3 p {
+    font-size: 16px;
+    color: green;
+    font-weight: bold;
+}
+
+.modal3 {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content3 {
+    display: flex;
+    flex-direction: column; /* Apila los elementos verticalmente */
+    align-items: center; /* Centra el contenido */
+    text-align: center; 
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    width: 500px;
+    height: 700px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+}
+
+.modal-content3 img {
+    width: 350px;
+    height: 450px;
+    border-radius: 10px;
+}
+
+
+.modal-content3 h3 {
+    margin: 10px 0;
+    font-size: 20px;
+}
+
+.modal-content3 p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.close-btn3 {
     position: absolute;
     top: 10px;
     right: 15px;
